--- a/about.html
+++ b/about.html
@@ -101,10 +101,8 @@
         <div class="about-text">
           <h3>ABOUT</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Consequuntur est iste quibusdam necessitatibus ipsum molestias illo
-            atque totam perspiciatis, possimus quo cumque sint debitis eum quae
-            magnam? Eos, pariatur culpa!
+            Seorang mahasiswa semester 5 Universitas Pamulang yang terbiasa bekerja dengan target dan disiplin yang tinggi
+            Menjunjung tinggi integritas. Saat ini saya bekerja sebagai Admin Finance di sebuah perusahaan yang terletak Jakarta Barat.
           </p>
 
           <a href="assets/files/resume.pdf" class="resume-btn" download>
