--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="latihan.html">Latihan</a></li>
+          <li><a href="latihan.html">Exercise</a></li>
           <!-- <li class="dropdown">
             <a href="tugas.html" class="dropdown-toggle"
               >Tugas <i class="ri-arrow-down-s-line"></i
