--- a/latihan.html
+++ b/latihan.html
@@ -324,7 +324,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="latihan.html">Latihan</a></li>
+      <li><a href="latihan.html">Exercise</a></li>
     </ul>
     <div class="menu-toggle" id="menuToggle">
       <i class="fas fa-bars"></i>
