--- a/sublatihan.html
+++ b/sublatihan.html
@@ -304,7 +304,7 @@
             <a href="about.html" class="nav-link">About</a>
             <a href="gallery.html" class="nav-link">Gallery</a>
             <a href="contact.html" class="nav-link">Contact</a>
-            <a href="Latihan.html" class="nav-link active">Latihan</a>
+            <a href="Latihan.html" class="nav-link active">Exercise</a>
           </div>
 
           <div class="md:hidden">
