--- a/gallery.html
+++ b/gallery.html
@@ -17,75 +17,7 @@
 
   <body>
     <!-- Navbar -->
-
-    <header>
-      <nav class="navbar">
-        <h2 class="logo">BeningFH</h2>
-
-        <!-- Tombol hamburger -->
-        <div class="menu-toggle" id="menu-toggle">
-          <i class="ri-menu-line"></i>
-        </div>
-
-        <!-- Link navigasi -->
-        <ul class="nav-links" id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="latihan.html">Latihan</a></li>
-          <!-- <li class="dropdown">
-            <a href="tugas.html" class="dropdown-toggle"
-              >Tugas <i class="ri-arrow-down-s-line"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li>
-              <a href="assets/files/Pertemuan2/latihan.html">Pertemuan2</a>
-              </li>
-              <li>
-                <a href="assets/files/pertemuan3/latihan.html">Pertemuan3</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan4/latihan.html">Pertemuan4</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan6/latihan.html">Pertemuan6</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan7/latihan/latihan.html"
-                  >Pertemuan7</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan8/latihan.html">Pertemuan8</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan9/index.html">Pertemuan9</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan10/Pertemuan10/iframe2.html"
-                  >Pertemuan10</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan11/tugasp11.html"
-                  >Pertemuan11</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan12/tugasp12.html"
-                  >Pertemuan12</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan13/latihan3.html"
-                  >Pertemuan13</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan14/landing-page-bening/index.html"
-                  >Pertemuan14</a>
-              </li> -->
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div id="navbar"></div>
 
     <!-- Icon Library -->
     <link
