--- a/about.html
+++ b/about.html
@@ -16,74 +16,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <header>
-      <nav class="navbar">
-        <h2 class="logo">BeningFH</h2>
-
-        <!-- Tombol hamburger -->
-        <div class="menu-toggle" id="menu-toggle">
-          <i class="ri-menu-line"></i>
-        </div>
-
-        <!-- Link navigasi -->
-        <ul class="nav-links" id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="latihan.html">Exercise</a></li>
-          <!-- <li class="dropdown">
-            <a href="tugas.html" class="dropdown-toggle"
-              >Tugas <i class="ri-arrow-down-s-line"></i
-            ></a>
-            <ul class="dropdown-menu">
-              <li>
-              <a href="assets/files/Pertemuan2/latihan.html">Pertemuan2</a>
-              </li>
-              <li>
-                <a href="assets/files/pertemuan3/latihan.html">Pertemuan3</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan4/latihan.html">Pertemuan4</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan6/latihan.html">Pertemuan6</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan7/latihan/latihan.html"
-                  >Pertemuan7</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan8/latihan.html">Pertemuan8</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan9/index.html">Pertemuan9</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan10/Pertemuan10/iframe2.html"
-                  >Pertemuan10</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan11/tugasp11.html"
-                  >Pertemuan11</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan12/tugasp12.html"
-                  >Pertemuan12</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan13/latihan3.html"
-                  >Pertemuan13</a>
-              </li>
-              <li>
-                <a href="assets/files/Pertemuan14/landing-page-bening/index.html"
-                  >Pertemuan14</a>
-              </li> -->
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div id="navbar"></div>
 
     <!-- Icon Library -->
     <link
@@ -101,8 +34,11 @@
         <div class="about-text">
           <h3>ABOUT</h3>
           <p>
-            Seorang mahasiswa semester 5 Universitas Pamulang yang terbiasa bekerja dengan target dan disiplin yang tinggi
-            Menjunjung tinggi integritas. Saat ini saya bekerja sebagai Admin Finance di sebuah perusahaan yang terletak Jakarta Barat.
+            Hello! I'm Bening Fajriatul Hawa, a passionate technology enthusiast
+            with a keen interest in web development and design. I love creating
+            beautiful and functional websites that provide great user
+            experiences. When I'm not coding, you can find me exploring the
+            latest tech trends or indulging in my hobby of photography.
           </p>
 
           <a href="assets/files/resume.pdf" class="resume-btn" download>
@@ -112,36 +48,6 @@
       </div>
     </section>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const dropdownToggle = document.querySelector(".dropdown-toggle");
-        const dropdownMenu = document.querySelector(".dropdown-menu");
-        const menuToggle = document.getElementById("menu-toggle");
-        const navLinks = document.getElementById("nav-links");
-
-        // === Dropdown ===
-        dropdownToggle.addEventListener("click", (e) => {
-          e.preventDefault();
-          dropdownMenu.classList.toggle("show");
-        });
-
-        document.addEventListener("click", (e) => {
-          if (
-            !dropdownToggle.contains(e.target) &&
-            !dropdownMenu.contains(e.target)
-          ) {
-            dropdownMenu.classList.remove("show");
-          }
-        });
-
-        // === Hamburger ===
-        menuToggle.addEventListener("click", () => {
-          navLinks.classList.toggle("show");
-          menuToggle.innerHTML = navLinks.classList.contains("show")
-            ? '<i class="ri-close-line"></i>'
-            : '<i class="ri-menu-line"></i>';
-        });
-      });
-    </script>
+    <script src="assets/js/load-component.js"></script>
   </body>
 </html>
