--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="latihan.html">Exercise</a></li>
+          <li><a href="latihan.html">Latihan</a></li>
           <!-- <li class="dropdown">
             <a href="tugas.html" class="dropdown-toggle"
               >Tugas <i class="ri-arrow-down-s-line"></i
@@ -121,36 +121,6 @@
       </div>
     </section>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const dropdownToggle = document.querySelector(".dropdown-toggle");
-        const dropdownMenu = document.querySelector(".dropdown-menu");
-        const menuToggle = document.getElementById("menu-toggle");
-        const navLinks = document.getElementById("nav-links");
-
-        // === Dropdown ===
-        dropdownToggle.addEventListener("click", (e) => {
-          e.preventDefault();
-          dropdownMenu.classList.toggle("show");
-        });
-
-        document.addEventListener("click", (e) => {
-          if (
-            !dropdownToggle.contains(e.target) &&
-            !dropdownMenu.contains(e.target)
-          ) {
-            dropdownMenu.classList.remove("show");
-          }
-        });
-
-        // === Hamburger ===
-        menuToggle.addEventListener("click", () => {
-          navLinks.classList.toggle("show");
-          menuToggle.innerHTML = navLinks.classList.contains("show")
-            ? '<i class="ri-close-line"></i>'
-            : '<i class="ri-menu-line"></i>';
-        });
-      });
-    </script>
+    <script src="assets/js/load-component.js"></script>
   </body>
 </html>
